# PythonTOC

./: ADVANCED_FEATURES.md  BUILD.md  CMakeLists.txt  DYNAMIC_ANALYSIS.md  MODULE_MANAGEMENT.md  README.md  ROADMAP.md  complex_example.cpp  config.json  glintcopy.dependencies.md  glintcopy.py  glintcopy.translation_report.md  plugin_manager.py  requirements-enhanced.txt  requirements.txt  setup.py  setup_enhanced.py  test_dynamic_translation.py  test_ml_guide.py  test_output.cpp  translate.py
cpp_modules/calculator_class/: CMakeLists.txt  README.md  main.cpp
cpp_modules/glintcopy/: CMakeLists.txt  README.md  conanfile.txt  main.cpp  vcpkg.json
examples/: CMakeLists.txt  calculator_class.py  complex_example.py  data_structures.py  data_structures.translation_report.md  numpy_example.py  pytorch_example.dependencies.md  pytorch_example.py  simple_example.py  simple_functions.py  simple_functions.translation_report.md  simple_module_example.py
examples/cpp_output/: CMakeLists.txt  calculator_class.cpp  data_structures.cpp  simple_functions.cpp
plugins/: mylibrary_plugin.py  numpy_plugin.py
src/: main.py
src/modules/: __init__.py  advanced_features.py  ai_optimizer.py  code_enhancer.py  dependency_manager.py  dynamic_analyzer.py  interactive_assistant.py  migration_analyzer.py  performance_benchmarker.py  plugin_system.py  project_generator.py  test_generator.py  web_api.py
src/modules/plugins/: loop_optimizer.py
src/parser/: __init__.py  ast_parser.py  type_inferrer.py
src/translator/: __init__.py  cpp_generator.py  library_mapper.py  module_manager.py  translator.py
src/utils/: __init__.py  helpers.py  templates.py
